src/deploy/kubernetes/example/quarkus/example-tenant-0/rules/network-policy/templates/sidecar-policy.yml
#curl http://callee-service-application.example-tenant-5a2f:8080/actuator/health
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar-policy
  namespace: example-tenant-0
spec:
  egress:
    - hosts:
        - ./*
        - istio-system/*
        - monitoring/*
        - keycloak/*
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
